# ssc

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE.txt  Makefile  README.txt  SECURITY.md  SMTPE.txt  W3-LICENCE.txt  attr.cpp  attr.h  attribute.h  attribute_classes.h  attribute_constructor.cpp  attributes.cpp  attributes.h  avm.cpp  avm.h  bigvector.h  build-boost.sh  build-debug.sh  build-gcc.sh  build.txt  byteorder.cpp  byteorder.h  catalina-clang-makefile  centos-clang-makefile  centos-gcc-makefile  common.cpp  common.h  connection.h  context.cpp  context.h  cpp.out  crosslink.cpp  crosslink.h  css.cpp  css.h  css_cache.cpp  css_cache.h  (+246 more)
.github/workflows/: codeql-analysis.yml
docs/: README.txt  character-sets-1.csv  iso_4217.xls
html/: rfc1942.html  rfc2070.html
recipe/heater/attribute/: attr.h  attr_state.h  attribute.h  attribute_classes.h  attributes.h  avm.h  avm_data.h  namespace.h
recipe/heater/base/: base.h  reldef.h  sz.h  type_base.h  type_case.h  type_core.h  type_master.h
recipe/heater/compound/: compound.h  type_all_of.h  type_compound.h  type_compounded.h  type_csses.h  type_fn.h  type_httpequivs.h  type_jsonics.h  type_langs.h  type_maths.h  type_measures.h  type_microdatas.h  type_microformats.h  type_mimes.h  type_numerics.h  type_one_of.h  type_some_of.h  type_svgs.h  type_sz.h  type_van.h  type_varied.h
recipe/heater/coop/: fred.h  kew.h  knickers.h  lox.h  tls.h
recipe/heater/css/: arguments.h  css.h  css_attribute.h  css_cache.h  css_class.h  css_element.h  css_global.h  css_group.h  css_parse.h  css_pre.h  css_state.h  decoration.h  descriptor.h  descriptor_classes.h  descriptors.h  distilled.h  ffv.h  ffvs.h  flags.h  fn.h  global.h  group.h  id.h  media.h  medium.h  properties.h  property.h  property_classes.h  rule.h  rules.h  selector.h  selectors.h  statement.h  statements.h  typed_property.h  value.h  value_types.h  weight.h
recipe/heater/element/: elem.h  element.h  element_attribute.h  element_classes.h  parentage.h  state.h
recipe/heater/enum/: enumerated.h  type_1.h  type_2.h  type_3.h  type_4.h  type_aria.h  type_class.h  type_colour.h  type_country.h  type_enum.h  type_enum_vec.h  type_lang.h  type_mime.h  type_rel.h  type_xmlns.h
recipe/heater/feedback/: nit.h  nitnames.h  nitout.h  nitpick.h
recipe/heater/icu/: charset.h  converter.h  lingo.h  wrapper.h
recipe/heater/main/: abort.h  args.h  balloon.h  context.h  enum.h  include.h  options.h  output.h  standard.h  version.h
recipe/heater/microdata/: microdata_export.h  microdata_itemid.h  microdata_itemprop.h  microdata_itemscope.h  microdata_itemtype.h
recipe/heater/microformat/: connection.h  def.h  family.h  field.h  microformat.h  microformat_classes.h  microformat_constructor.h  microformat_export.h  microformat_export_rel.h  microformat_properties.h  microformats.h  microformats_ptr.h  prop.h  property.h  property_classes.h  property_value.h  sibling.h
recipe/heater/ontology/: jsonld.h  ontology_hierarchy.h  ontology_name.h  ontology_property.h  ontology_structure.h  ontology_type.h  ontology_version.h
recipe/heater/parser/: html_version.h  jsonic.h  parse_abb.h  parse_attribute.h  parse_attributes.h  parse_bra_ket.h  parse_brac_ket.h  parse_bracs_ket.h  parse_bras_ket.h  parse_css.h  parse_element.h  parse_elements.h  parse_prefix.h  parse_ssi.h  pattern.h  text-data.h  text.h  xhtml_xml.h
recipe/heater/rdf/: rdf.h  rdfa_prop.h  rdfa_type.h
recipe/heater/schema/: jsonld.h  schema_hierarchy.h  schema_name.h  schema_property.h  schema_structure.h  schema_type.h  schema_version.h
recipe/heater/simple/: simple.h  type_autocomplete.h  type_basic.h  type_cookie.h  type_css.h  type_currency.h  type_httpequiv.h  type_id.h  type_jsonic.h  type_layout.h  type_math.h  type_measure.h  type_media.h  type_metaname.h  type_microdata.h  type_microformat.h  type_misc.h  type_numeric.h  type_rdf.h  type_reals.h  type_relational.h  type_svg.h  type_time.h  type_url.h
recipe/heater/spell/: phrase.h  spell.h
recipe/heater/stats/: stats.h  stats0.h  stats1.h  stats2.h  stats3.h  stats4.h  stats5.h  stats6.h  stats_impl.h
recipe/heater/symbol/: nstr.h  symbol.h  symbol_entry.h  symbol_key.h  symbol_store.h  symbol_table.h
recipe/heater/type/: enum.h  reldef.h  sz.h  type.h  type_1.h  type_2.h  type_3.h  type_4.h  (+41 more)
recipe/htdocs/: copyright.html  download.html  index.html  ssc.css
recipe/httpd/: about.shtml  advanced.shtml  build.shtml  index.html  index.shtml  legal.shtml  release-notes.shtml  usage.shtml  why.shtml
recipe/spex/: README.txt
recipe/tea/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  RCa03076  README.txt  addtest.sh  cmake_install.cmake  cmake_uninstall.cmake  cpp.hint  fulltest.bat  fulltest.sh  resource.h  resource1.h  specprep.bat  ssc-test  ssc-test.vcxproj  ssc-test.vcxproj.filters  ssc.aps  ssc.rc  ssc.sln  ssc.vcxproj  ssc.vcxproj.filters  ssc13-test.vcxproj  ssc13-test.vcxproj.filters  ssc13.sln  ssc13.vcxproj  ssc13.vcxproj.filters  ssc15-test.vcxproj  ssc15-test.vcxproj.filters  ssc15.sln  ssc15.vcxproj  ssc15.vcxproj.filters  ssc17-test.vcxproj  ssc17-test.vcxproj.filters  ssc17.sln  ssc17.vcxproj  ssc17.vcxproj.filters  ssc19-test.aps  ssc19-test.rc  (+12 more)
recipe/tea/.ssc/: README.txt  config  fileindex.asc  out_footer.tpl  out_header.tpl
recipe/tea/Testing/Temporary/: CTestCostData.txt
recipe/toast/: README.txt
tests/CSS/: css-good.css  css.conf  css.spec
tests/conf/: betsy-live.conf  corona-live.conf  corrupt.conf  live.conf  simple.conf
tests/link/: link.conf  link.spec  target.html
tests/parsing/: parsing-bad.html  parsing.conf  parsing.spec  quotes.html  scripts.html
tests/simple/: simple.conf  simple.spec
tests/site/: BingSiteAuth.xml  README.txt  corrupt-me.rss  index.html  index.shtml  sitemap.xml
tests/ssc-test/: input.spec  output.txt  scc.lst  unix.lst
tests/ssi/: ssi-comment.html  ssi-include.html  ssi-vars.html  ssi.conf  ssi.spec
tests/virtual/: README.txt
tests/webmention/: change.tpl  delete.tpl  new.tpl  ssc.db  static.tpl  swlc.db  webmention.conf  webmention.spec
(+4689 files in other folders)
